# pdf-tools

./: .gitignore  README.md  package-lock.json  package.json  pdf_toolbox_development_document.md  pdf_toolbox_executable_development_plan.md
backend/: .env.example  README.md  alembic.ini  pdf-tools-x64.spec  pdf-tools-x86.spec  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: b1bdaf76715f_add_warnings_column_to_tasks.py  cd9d90e1bda9_add_settings_table.py  f1fa1ed67ec5_create_initial_tables.py  ff097424aa23_add_result_info_to_tasks.py
backend/app/: __warnings_debug.py  config.py  database.py  main.py
backend/app/api/: files.py  previews.py  settings.py  tasks.py  trace.py
backend/app/models/: __init__.py  copyright_fingerprint.py  download_log.py  file.py  setting.py  task.py  user.py
backend/app/pdf_engines/: __init__.py  images_to_pdf.py  page_ranges.py  pdf_to_png.py  pdf_to_word.py  protect_pdf.py  remove_pages.py  split_pdf.py  watermark.py
backend/app/schemas/: __init__.py  file.py  preview.py  setting.py  task.py  trace.py
backend/app/security/: __init__.py  file_validation.py
backend/app/services/: __init__.py  file_service.py  naming_service.py  task_service.py
backend/app/storage/: __init__.py  local_storage.py
backend/app/tests/integration/: conftest.py  test_pdf_to_word.py  test_protect_pdf.py  test_split_pdf.py  test_watermark_api.py
backend/app/tests/unit/: test_health.py  (+1 more)
backend/app/workers/: __init__.py  task_runner.py
backend/pdf_tools_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+24 files in other folders)
