[project]
name = "pdf-tools-backend"
version = "0.1.0"
description = "Web PDF toolbox backend"
requires-python = ">=3.11,<3.15"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "pymupdf>=1.24.0",
  "pypdf>=4.3.0",
  "img2pdf>=0.5.1",
  "pillow>=10.4.0",
  "pdf2docx>=0.5.8",
  "qrcode>=7.4.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]
protect = [
  "cryptography>=43.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
plugins = []
strict = false
ignore_missing_imports = true
